fix: add white-space:pre-wrap to code-holder as line break fallback

--- a/css/github-markdown.css
+++ b/css/github-markdown.css
@@ -558,7 +558,8 @@ color: var(--text-link-hover);
 }
 
 .markdown-body .code-holder code {
-background-color:rgba(27,31,35,.05);
+white-space: pre-wrap;
+    background-color:rgba(27,31,35,.05);
     border-radius:3px;
     font-size:85%;
     margin:0;
